test/compile-fail/resolution/use/self-no-name/expected.txt
error[E0425]: unresolved item `b`
  ┌─ ./test/compile-fail/resolution/use/self-no-name/top.rhdl:3:14
  │
3 │ use self::a::b;
  │              ^ no `b` item in `a`

